--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,11 +256,16 @@ span {
 }
 
 .portfolio-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
+    justify-content: center;
     align-items: center;
     gap: 2.5rem;
+    flex-wrap: nowrap; 
+    overflow-x: auto; 
+    height: auto;
+    border-radius: 10px;
 }
+
 
 .portfolio-container .portfolio-box {
     position: relative;
